--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
             <h2>本站业务范围</h2>
             <p>保障用户权益以及数据安全是我们的运营资本，为您服务是我们的责任</p>
             <p>您的满意是我们的追求，利用我们的资源满足客户的需求</p>
-            <p>“专业经营，诚信服务，客户至上 ”</p>
+            <p>“我们承诺，全心全力，帮您成功”</p>
+            <p>“我们的立场只做第一”</p>
+            <p>“我们的服务让您满意更让您感动”</p>
           </div>
         </div> 
       </div>
@@ -366,19 +368,19 @@
       </div>
     </div>
     <div class="back" id="back"><a href="#home">TOP</a></div>
-    <div class="backe" id="backe">
-        <div class="a1">
-            <div class="a2">登录/注册</div>
-            <div class="a3"><a href="#" class="fa fa-user fa-2x" style="color:#888787;"></a></div>
-        </div>
-        <div class="a1">
-            <div class="a2">二维码</div>
-            <div class="a3"><a href="#" class="fa fa-weixin fa-2x" style="color:#888787;"></a></div>
-        </div>
-        <div class="top">
-            <div class="top-a"><a href="#home" class="fa fa-arrow-up fa-2x" style="display: block;color:#fff;width: 38px;height: 40px;margin: 10px 0px 0px 12px ;"></a></div>
-        </div>
-    </div>
+    <div class="Sign" id="Sign">
+      <div class="sign">
+        <div class="sign-a"><a href="#">登录&nbsp;/&nbsp;注册</a></div>
+        <div class="sign-b"><a href="#" class="fa fa-user fa-2x"></a></div>
+      </div>
+      <div class="erweima">
+        <div class="erweima-a"><img src="static/index/style/images/ma.png" alt=""></div>
+        <div class="erweima-b"><a href="#" class="fa fa-weixin fa-2x"></a></div>
+      </div>
+      <div class="top">
+        <div class="top-b"><a href="#home" class="fa fa-arrow-up fa-2x"></a></div>
+      </div>
+  </div>
   </footer>
   <script type="text/javascript" src="static/index/common/jquery-1.11.0.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
